[package]
name = "secure_voting_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.14.0"  # Use the latest compatible version
ff = "0.13.0"       # Use the latest compatible version
pairing = "0.23.0" # Use the latest compatible version
rand = "0.8.5"     # Already in your code, ensure it's included
bls12_381 = "0.8.0"
bincode = "1.3.3"
